automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -21,10 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def adder(a, b):\n",
@@ -51,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class MyProgram(core.TestProgram):\n",
@@ -117,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,22 +121,22 @@
       "text/html": [
        "<div>\n",
        "                <div style=\"background:red; width:10px\">&nbsp;</div>\n",
-       "                <div style=\"background:green; width:640px\">&nbsp;</div>\n",
+       "                <div style=\"background:green; width:720px\">&nbsp;</div>\n",
        "                </div>\n",
        "                <h2 style=\"color:red\">Errors</h2><table></table>\n",
        "                <h2 style=\"color:red\">Failures</h2><table><tr><td>__main__.test_nothing</td><td><pre><![CDATA[Traceback (most recent call last):\n",
-       "  File \"/Users/flatironschool/anaconda/lib/python3.6/site-packages/nose/case.py\", line 197, in runTest\n",
+       "  File \"/opt/conda/lib/python3.6/site-packages/nose/case.py\", line 197, in runTest\n",
        "    self.test(*self.arg)\n",
-       "  File \"<ipython-input-15-ae7cf2e003f7>\", line 5, in test_nothing\n",
+       "  File \"<ipython-input-2-f505897520f6>\", line 5, in test_nothing\n",
        "    assert 1+2 == 2\n",
        "AssertionError\n",
        "]]></pre></td></table>"
       ],
       "text/plain": [
-       "<__main__.MyResult run=65 errors=0 failures=1>"
+       "<__main__.MyResult run=73 errors=0 failures=1>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
